--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -19,6 +19,10 @@
     .bio {
         width: 70%;
     }
+
+    .card-title {
+        font-size: 2rem;
+    }
 }
 
 @media (min-width: $lg) {
